# lie

./: CMakeLists.txt  Readme.md
lie/: Adjoint.cpp  Adjoint.h  CMakeLists.txt  Constants.cpp  Constants.h  S2.cpp  S2.h  S2Alg.h  S2Exp.cpp  S2Exp.h  SE2.h  SE2Alg.h  SE2Exp.cpp  SE2Exp.h  SE2Params.cpp  SE2Params.h  SE3.h  SE3Alg.h  SE3Exp.cpp  SE3Exp.h  SE3Log.cpp  SE3Log.h  SE3Params.cpp  SE3Params.h  SO3.h  SO3Alg.h  SO3Exp.cpp  SO3Exp.h  SO3Log.cpp  SO3Log.h  SO3Params.cpp  SO3Params.h  SkewSymm.cpp  SkewSymm.h  Tagged.h  Utils.cpp  Utils.h
lie/tests/: CMakeLists.txt  S2.cpp  SE2.cpp
lie/wxmaxima/: normalize.wxmx
